# rebac-auth-service

./: .gitignore  README.md  pyproject.toml  test_neo4j.py
cmd/server/: main.py
deploy/local/: docker-compose.yml
internal/: types.py
internal/neo4j/: schema.py  store.py
internal/rebac/: interfaces.py  model.py
proto/: authz.proto  generate.sh
